feat: Avoid using Profile Setting Administration for AboutMe and Experiences Profile fields - MEED-7810 - Meeds-io/meeds#2577 (#4194)
Prior to this change, the User Profile fields `AboutMe` and
`experiences` was controlled by `ProfileSettingService` API which was
considered due to Meeds-io/si#3 issue. This change will avoid using such
control explicitly on 'AboutMe' and 'Experiences' field since it's
displayed in dedicated sections in the profile page of the user, and
thus will be displayed all time for all users when not empty.

At the same time, the field `gender` isn't retrieved automatically in
Profile REST calls since it's deprecated functionally.